🔧 Fix: Adicionar função openCash global
✅ Problema identificado e corrigido:

❌ Erro: Uncaught ReferenceError: openCash is not defined
🎯 Causa: Função openCash estava apenas dentro da classe CashierSystem
🔧 Solução: Criada função global openCash() que chama cashierSystem.openCash()

✅ Correção implementada:
- Função global openCash() adicionada
- Chama cashierSystem.openCash() internamente
- Botão '✅ Abrir Caixa' agora funciona
- Erro ReferenceError resolvido

🎯 Agora o controle de caixa deve funcionar perfeitamente:
- Botão '✅ Abrir Caixa' funcionará
- Modal fechará corretamente
- Caixa abrirá com sucesso
- Interface atualizará dinamicamente

💡 Teste novamente:
1. Clique 'Controle de Caixa'
2. Digite valor inicial
3. Clique '✅ Abrir Caixa'
4. Verifique se funcionou!

--- a/web-site/src/cashier.html
+++ b/web-site/src/cashier.html
@@ -1405,6 +1405,10 @@
       cashierSystem.closeCash();
     }
     
+    function openCash() {
+      cashierSystem.openCash();
+    }
+    
     function testOpenCash() {
       console.log('🧪 Teste da função openCash');
       console.log('💰 Valor atual:', document.getElementById('initialCashValue').value);
