--- a/web-site/src/cashier.html
+++ b/web-site/src/cashier.html
@@ -1451,6 +1451,7 @@
           paymentMethods: paymentMethods,
           changeAmount: change,
           receivedAmount: receivedAmount,
+          observations: this.cart[0]?.observations || '', // Adicionar observações da venda
           status: 'completed'
         };
         
