--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -339,7 +339,9 @@
           </div>
         </div>
         
-        <button onclick="showCashReports()" style="margin-top: 15px; width: 100%;">📋 Ver Relatórios Detalhados</button>
+        <button onclick="showCashReports()" style="margin-top: 15px; width: 100%; padding: 8px; background: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">
+          📋 Ver Relatórios Detalhados
+        </button>
       </div>
 
       <!-- Ações Rápidas -->
