--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -350,6 +350,7 @@
         <button class="btn btn-success" onclick="openAddUserModal()">+ Novo Usuário</button>
         <button class="btn" onclick="refreshUsers()">🔄 Atualizar Lista</button>
         <button class="btn" onclick="exportUsers()">📤 Exportar Dados</button>
+        <button class="btn" onclick="window.location.href='index.html'" style="background: #28a745; color: white;">🏠 Dashboard</button>
       </div>
     </div>
 
