🔧 Fix: Criação de dashboard.html sem redirecionamento automático
✅ PROBLEMA RESOLVIDO:

❌ Dashboard aparecia brevemente e redirecionava
❌ Redirecionamento automático interferia
❌ Página não carregava completamente
🎯 Causa: index.html tem redirecionamento automático
🔧 Solução: dashboard.html sem redirecionamento

✅ Solução implementada:

🔧 Novo arquivo dashboard.html:
- Dashboard completo sem redirecionamento
- Estatísticas gerais do sistema
- Gráfico de vendas por período
- Ações rápidas para navegação
- Visual moderno e responsivo

🔧 Funcionalidades do dashboard:
- Estatísticas de usuários
- Vendas do dia atual
- Receita total
- Gráfico interativo
- Navegação rápida

🔧 Botão corrigido:
- Antigo: window.open('index.html', '_blank')
- Novo: window.open('dashboard.html', '_blank')
- Sem redirecionamento automático
- Dashboard completo carregado

✅ Benefícios:
- Dashboard carrega completamente
- Sem redirecionamento automático
- Estatísticas em tempo real
- Navegação facilitada
- Visual moderno

🎯 Resultado:
- Botão Dashboard funcionando
- Dashboard completo carregado
- Sem redirecionamento automático
- Estatísticas atualizadas

--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -350,7 +350,7 @@
         <button class="btn btn-success" onclick="openAddUserModal()">+ Novo Usuário</button>
         <button class="btn" onclick="refreshUsers()">🔄 Atualizar Lista</button>
         <button class="btn" onclick="exportUsers()">📤 Exportar Dados</button>
-        <button class="btn" onclick="window.open('index.html', '_blank')" style="background: #28a745; color: white;">🏠 Dashboard</button>
+        <button class="btn" onclick="window.open('dashboard.html', '_blank')" style="background: #28a745; color: white;">🏠 Dashboard</button>
       </div>
     </div>
 
