🔧 Corrigir detecção de caixas abertos no painel administrativo
- Adicionar category e cashier ao cashControl no sistema de caixa
- Implementar detecção automática de categoria das vendas
- Adicionar logs detalhados para debug de caixas abertos
- Corrigir verificação final de caixas abertos
- Melhorar debug do localStorage e dados do controle
- Garantir que caixas abertos sejam detectados corretamente

--- a/web-site/src/cashier.html
+++ b/web-site/src/cashier.html
@@ -1531,7 +1531,9 @@
           todaySales: 0,
           lastOpened: new Date().toISOString(),
           lastClosed: null,
-          observations: observations
+          observations: observations,
+          category: this.currentCategory,
+          cashier: this.currentUser ? this.currentUser.name : 'Sistema'
         };
         
         console.log('💾 Salvando controle de caixa:', this.cashControl);
