🔧 Corrigir relatório de avaliações e observações
- Adicionar função global showEvaluationsReport() no painel administrativo
- Corrigir observações de avaliações para usar texto do usuário
- Alterar método de pagamento de 'evaluation' para 'N/A' nas avaliações
- Garantir que observações personalizadas sejam preservadas
- Corrigir exibição de dados nos relatórios detalhados
- Melhorar formatação de dados de avaliações nos relatórios

--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -1893,6 +1893,10 @@
       adminSystem.updateRealTimeStats();
     }
     
+    function showEvaluationsReport() {
+      adminSystem.showEvaluationsReport();
+    }
+    
     function startAutoRefresh() {
       if (autoRefreshInterval) {
         clearInterval(autoRefreshInterval);
