--- a/web-site/src/cashier.html
+++ b/web-site/src/cashier.html
@@ -1403,10 +1403,10 @@
             quantity: 1,
             unitPrice: 0,
             total: 0,
-            paymentMethods: ['evaluation'],
+            paymentMethods: ['N/A'],
             receivedAmount: 0,
             changeAmount: 0,
-            observations: `Avaliação #${evaluationNumber} - Instrutor: ${instructorName}`,
+            observations: observations || `Avaliação #${evaluationNumber} - Instrutor: ${instructorName}`,
             type: 'evaluation',
             saleType: 'evaluation',
             instructorName: instructorName,
@@ -1557,7 +1557,7 @@
               items: [evaluation],
               total: 0, // Avaliações não têm valor
               type: 'evaluation',
-              paymentMethods: ['evaluation'],
+              paymentMethods: ['N/A'],
               changeAmount: 0,
               receivedAmount: 0,
               observations: evaluation.observations,
