🔧 Corrigir exibição de dados de avaliações nos relatórios
- Corrigir método de pagamento para mostrar 'N/A' em avaliações
- Remover '#' do número da avaliação no relatório de avaliações
- Corrigir observações para mostrar apenas texto do usuário
- Adicionar tratamento específico para tipo 'evaluation' nos relatórios
- Melhorar formatação de dados nos relatórios detalhados
- Garantir que avaliações sejam exibidas corretamente em todos os relatórios

--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -851,9 +851,9 @@
                 <tr>
                   <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">${new Date(evaluation.timestamp).toLocaleString('pt-BR')}</td>
                   <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">${evaluation.customerName || 'N/A'}</td>
-                  <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">#${evaluation.evaluationNumber || 'N/A'}</td>
+                  <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">${evaluation.evaluationNumber || 'N/A'}</td>
                   <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">R$ ${(evaluation.total || 0).toFixed(2)}</td>
-                  <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">${(evaluation.paymentMethods || []).join(', ').toUpperCase()}</td>
+                  <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">N/A</td>
                   <td style="padding: 8px; border: 1px solid #ddd; text-align: center;">${evaluation.observations || 'N/A'}</td>
                 </tr>
               `).join('')}
@@ -1796,12 +1796,18 @@
             'debit': 'Débito',
             'credit': 'Crédito',
             'cash': 'Dinheiro',
-            'card': 'Cartão'
+            'card': 'Cartão',
+            'n/a': 'N/A'
           };
           
-          paymentMethods = rawPaymentMethods.map(method => 
-            paymentTranslations[method.toLowerCase()] || method
-          ).join(', ');
+          // Para avaliações, sempre mostrar N/A
+          if (sale.type === 'evaluation') {
+            paymentMethods = 'N/A';
+          } else {
+            paymentMethods = rawPaymentMethods.map(method => 
+              paymentTranslations[method.toLowerCase()] || method
+            ).join(', ');
+          }
           
           // Extrair troco
           if (sale.change_amount !== undefined && sale.change_amount !== null && !isNaN(sale.change_amount)) {
