--- a/web-site/src/cashier.html
+++ b/web-site/src/cashier.html
@@ -1406,7 +1406,7 @@
             paymentMethods: ['N/A'],
             receivedAmount: 0,
             changeAmount: 0,
-            observations: observations || `Avaliação #${evaluationNumber} - Instrutor: ${instructorName}`,
+            observations: observations || '',
             type: 'evaluation',
             saleType: 'evaluation',
             instructorName: instructorName,
