🔧 Corrigir exibição de número e nome do cliente em avaliações
- Remover '#' do número da avaliação na mensagem de sucesso
- Incluir customerName e customerDocument no objeto sale das avaliações
- Corrigir exibição do nome do cliente no relatório de avaliações
- Melhorar consistência dos dados salvos para avaliações

--- a/web-site/src/cashier.html
+++ b/web-site/src/cashier.html
@@ -1428,7 +1428,7 @@
           this.clearForm();
           
           console.log('✅ Avaliação adicionada ao carrinho:', cartItem);
-          alert(`Avaliação #${evaluationNumber} do instrutor ${instructorName} adicionada com sucesso!`);
+          alert(`Avaliação ${evaluationNumber} do instrutor ${instructorName} adicionada com sucesso!`);
           return;
         }
         
@@ -1564,6 +1564,8 @@
               timestamp: new Date().toISOString(),
               category: this.currentCategory,
               cashier: this.currentUser ? this.currentUser.name : 'Sistema',
+              customerName: evaluation.customerName,
+              customerDocument: evaluation.customerDocument,
               items: [evaluation],
               total: 0, // Avaliações não têm valor
               type: 'evaluation',
