--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -133,19 +133,18 @@
       font-weight: 800;
       margin-bottom: 0.25rem;
       letter-spacing: -0.025em;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      background: linear-gradient(135deg, var(--white) 0%, rgba(255, 255, 255, 0.8) 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
+      color: var(--white);
+      text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+      filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.2));
     }
     
     .header-subtitle {
       font-size: 1rem;
-      opacity: 0.95;
+      color: var(--white);
       font-weight: 500;
-      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      text-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
       letter-spacing: 0.5px;
+      opacity: 0.9;
     }
     
     .logout-btn {
