--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -69,6 +69,18 @@
       border-bottom: 3px solid var(--primary-light);
     }
     
+    header::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 4px;
+      background: linear-gradient(90deg, #8b5cf6 0%, #a855f7 25%, #c084fc 50%, #f59e0b 75%, #f97316 100%);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      z-index: 10;
+    }
+    
     header::before {
       content: '';
       position: absolute;
