fix: corrige barrinha colorida do header
- Aumenta altura da barrinha para 6px (mais visível)
- Melhora gradiente com mais cores e transições
- Aumenta z-index para 100 (garantir que fique no topo)
- Adiciona border-radius na parte inferior
- Intensifica sombra para melhor visibilidade
- Barrinha agora deve aparecer corretamente no topo

--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -75,10 +75,11 @@
       top: 0;
       left: 0;
       right: 0;
-      height: 4px;
-      background: linear-gradient(90deg, #8b5cf6 0%, #a855f7 25%, #c084fc 50%, #f59e0b 75%, #f97316 100%);
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      z-index: 10;
+      height: 6px;
+      background: linear-gradient(90deg, #8b5cf6 0%, #a855f7 20%, #c084fc 40%, #f59e0b 60%, #f97316 80%, #fb923c 100%);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+      z-index: 100;
+      border-radius: 0 0 3px 3px;
     }
     
     header::before {
