--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -75,11 +75,13 @@
       top: 0;
       left: 0;
       right: 0;
-      height: 6px;
+      bottom: 0;
+      height: 100%;
       background: linear-gradient(90deg, #8b5cf6 0%, #a855f7 20%, #c084fc 40%, #f59e0b 60%, #f97316 80%, #fb923c 100%);
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-      z-index: 100;
-      border-radius: 0 0 3px 3px;
+      z-index: 1;
+      border-radius: 0 0 8px 8px;
+      opacity: 0.8;
     }
     
     .header::before {
@@ -105,7 +107,7 @@
       justify-content: space-between;
       align-items: center;
       position: relative;
-      z-index: 1;
+      z-index: 10;
     }
     
     .header-left {
