--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -75,7 +75,7 @@
       top: 0;
       left: 0;
       right: 0;
-      height: 100%;
+      height: 80px;
       background: linear-gradient(90deg, #8b5cf6 0%, #a855f7 20%, #c084fc 40%, #f59e0b 60%, #f97316 80%, #fb923c 100%);
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
       z-index: 1;
