fix: aumenta padding inferior do header para afastar 'Administrador'
- Muda padding de '2rem 2rem' para '2rem 2rem 2.5rem 2rem'
- Aumenta padding inferior de 2rem para 2.5rem (8px a mais)
- Texto 'Administrador' agora fica mais afastado da borda inferior
- Visual mais equilibrado e legível
- Espaçamento adequado na parte inferior do header

--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -62,7 +62,7 @@
     header {
       background: linear-gradient(135deg, var(--neutral-dark) 0%, var(--neutral) 30%, var(--primary) 70%, var(--primary-light) 100%);
       color: var(--white);
-      padding: 2rem 2rem;
+      padding: 2rem 2rem 2.5rem 2rem;
       box-shadow: var(--shadow-xl);
       position: relative;
       overflow: hidden;
