--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -62,7 +62,7 @@
     header {
       background: linear-gradient(135deg, var(--neutral-dark) 0%, var(--neutral) 30%, var(--primary) 70%, var(--primary-light) 100%);
       color: var(--white);
-      padding: 2rem 2rem 2.5rem 2rem;
+      padding: 2rem 2rem 3rem 2rem;
       box-shadow: var(--shadow-xl);
       position: relative;
       overflow: hidden;
@@ -104,9 +104,10 @@
     .header-content {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       position: relative;
       z-index: 10;
+      padding-top: 0.5rem;
     }
     
     .header-left {
