--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -122,6 +122,7 @@
       flex-direction: column;
       justify-content: center;
       height: 100%;
+      padding: 1rem 0;
     }
     
     .header-icon {
@@ -155,7 +156,7 @@
       text-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
       letter-spacing: 0.5px;
       opacity: 0.9;
-      margin-bottom: 0.5rem;
+      margin: 0.5rem 0;
     }
     
     .logout-btn {
