--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -146,6 +146,8 @@
       text-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
       letter-spacing: 0.5px;
       opacity: 0.9;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
     }
     
     .logout-btn {
