--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -104,16 +104,18 @@
     .header-content {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       position: relative;
       z-index: 10;
       height: 100%;
+      padding-top: 0.5rem;
     }
     
     .header-left {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       gap: 1rem;
+      padding-top: 0.5rem;
     }
     
     .header-left > div {
