fix: corrigir posicionamento do ícone troféu
- Alterar align-items para center no header-left
- Remover padding-top desnecessário
- Centralizar ícone troféu com os textos
- Manter textos e botão SAIR onde estão
- Apenas ajustar posicionamento do ícone troféu

--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -113,9 +113,8 @@
     
     .header-left {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       gap: 1rem;
-      padding-top: 0.5rem;
     }
     
     .header-left > div {
