--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -498,7 +498,7 @@
     <div class="header-content">
       <div class="header-left">
         <div class="header-icon">
-          <i class="fas fa-trophy"></i>
+          <i class="fas fa-user-shield"></i>
         </div>
         <div>
           <h1>Painel Administrativo</h1>
