fix: corrigir alinhamento do ícone no header-left
- Alterar align-items para flex-start no header-left
- Adicionar padding-top: 0.5rem para alinhamento
- Sincronizar com header-content que já tem flex-start
- Corrigir posicionamento do ícone fa-user-shield
- Manter textos e botão SAIR onde estão

--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -113,8 +113,9 @@
     
     .header-left {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       gap: 1rem;
+      padding-top: 0.5rem;
     }
     
     .header-left > div {
