--- a/web-site/src/admin.html
+++ b/web-site/src/admin.html
@@ -138,6 +138,17 @@
       backdrop-filter: blur(10px);
       flex-shrink: 0;
       align-self: center;
+      overflow: hidden;
+      position: relative;
+    }
+    
+    .header-icon i {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5rem;
+      z-index: 2;
     }
     
     .header h1 {
